--- a/styles/style.css
+++ b/styles/style.css
@@ -145,8 +145,18 @@ h1.title{
 	font-weight: bold; 
 	font-family: 'Helvetica', sans-serif; 
 }
+h1.title-2-text{
+	color: #FFFFFF;
+	font-size: 24px;
+	font-weight: bold; 
+	font-family: 'Helvetica', sans-serif; 
+}
+
 hr.line{
-	border-top: 1px solid #FFFFFF;
+	border-top: 1px solid #FFFFFF
+}
+.line{
+	margin-bottom: 40px;
 }
 p.context{
 	margin-bottom: 30px;
@@ -564,17 +574,17 @@ input::placeholder{
 
 @media screen and (max-width: 768px){
 	.body{
-		width: 768px;
+		max-width: 768px;
 	}
 	.head{
 		width: 100%;
 	}
 	.more-news{
-		max-width: 768px;
+		width: 100%;
 		height: 743px;
 	}
 	.news{
-		width: 768px;
+		width: 100%;
 		display: flex;
 		flex-direction: column;
 	}
@@ -582,24 +592,37 @@ input::placeholder{
 		display: none;
 	}
 	.left-cont{
+		width: 100%;
 		height: 400px;
 	}
 	.background-image{
-		background-image: url(
-"../img/image8.png");
+		background-image: url("../img/image8.png");
 		background-size: cover;
 		background-position: center;
 		background-repeat: no-repeat;	
-		width: 768px;
-		height: 400px;
+		width: 100%;
+		height: 100%;
 	}
 	.text-container{
 		width: 608px;
     	height: 239px;
 	}
+	.text{
+		width: 100%;
+		height: 100%;
+	}
+	.title{
+		margin-bottom: 30px!important;
+	}
+	.line{
+		margin-bottom: 40px;
+	}
+	.title-2-text{
+		margin-bottom: 0;
+	}
 	.right-cont{
-		width: 768px;
-	    min-height: 343px;
+		width: 100%;
+	    
 	    padding: 40px 0;
 	    display: flex;
 	    flex-direction:column;
@@ -607,7 +630,14 @@ input::placeholder{
 	}
 	.title_container{
 	    width: 608px;
-    	height: 60px;
+	    display: flex;
+	    flex-direction: column;
+	}
+	.tit_sec{
+		width: 100%;
+	}
+	.line_sec{
+		margin: 35px 0 40px 0;
 	}
 	br{
 		display: none;
@@ -624,9 +654,7 @@ input::placeholder{
 	.tit_seccond{
 		margin-bottom: 0;
 	}
-	.line_sec{
-	 	margin: 40px 0;
-	}
+
 	.box_sec_title span{
 		display: none;
 	}
@@ -653,6 +681,7 @@ input::placeholder{
 	    font-style: oblique;
 	}
 	.gallery_information{
+		width: 100%;
 		margin-top: 40px;
 	}
 	.gallery{
@@ -671,21 +700,28 @@ input::placeholder{
 		margin-left: 30px;
 		margin-right: 30px;
 	} 
+	.gal-conte{
+		line-height: 24px;
+	}
+	.gal-conte2{
+		display: none;
+	}
 	.happening-sec{
-		width: 768px;
+		width: 100%;
 	}
 	.big-cont{
 		width: 608px;
 	}
 	.gallery-container{
+		width: 100%;
 	    display: flex;
     	flex-direction: column;
 	}
 	.ga-left-cont{
-		width: 608px;
+		width: 100%;
 	}
 	.left-img-box-top{
-		width: 608px;
+		width: 100%;
 		height: 430px;
 	}
 	.left-img-box-bot{
@@ -696,14 +732,21 @@ input::placeholder{
 		height: 100%;
 	}
 	.left-cont-context{
-		width: 528px;
+		max-width: 528px;
+	}
+	.left-cont-context-text{
+		letter-spacing: 0;
+		line-height: 24px;
+		margin-top: 5px;
 	}
 	.span-secret{
 		opacity: 1;
 	}
-
+	.lr-time-box{
+		margin-top: 10px; 
+	}
 	.ga-right-cont{
-		width: 608px;
+		width: 100%;
 	    display: flex;
 	    margin-top: 40px;
 	    justify-content: space-between;
@@ -725,6 +768,9 @@ input::placeholder{
 		width: 100%;
 		height: 180px;
 	}
+
+	/*footer*/
+
 	.footer{
 		width: 100%;
 		height: 316px;
