--- a/styles/style.css
+++ b/styles/style.css
@@ -630,7 +630,7 @@ input::placeholder{
 	}
 	.right-cont{
 		width: 100%;
-	    
+		height: 343px;
 	    padding: 40px 0;
 	    display: flex;
 	    flex-direction:column;
@@ -870,7 +870,7 @@ input::placeholder{
 		height: 100vh;
 		position: absolute;
 		top: 0;
-		left: -90%;
+		left: -110%;
 		background: #F6F8F9;
 		z-index: 111;
 	    box-shadow: 10px 0px 50px rgb(0 0 0 / 60%);
@@ -922,7 +922,7 @@ input::placeholder{
 		margin-left: 0;
 	}
 	.mob-nav-ul-li:nth-child(1){
-		margin-bottom: 80px;
+		margin-bottom: 40px;
 		background-color: #F6F8F9!important;
 	}
 	.icon{
