--- a/styles/style.css
+++ b/styles/style.css
@@ -974,7 +974,7 @@ input::placeholder{
 	}
 	.right-cont{
 		width: 100%;
-		/*height: 478px;*/
+		height: 478px;
 	}
 	.title_container{
 		width: 327px;
