--- a/styles/style.css
+++ b/styles/style.css
@@ -929,6 +929,43 @@ input::placeholder{
 		width: 16px;
 		height: 16px;
 	}
+
+	.mobile-social-side{
+	    width: 100%;
+   	 	height: 310px;
+    	background: #707070;
+    	margin-top: 108px;
+    	padding: 0 20px;
+	}
+	.list{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	.list-ul{
+		display: flex;
+		flex-direction: column;
+		align-items: start;
+		margin-top: 40px;
+	}
+	.list-li{
+		margin: 10px 0;
+		font-size: 11px;
+		font-weight: bold;
+		color: #FFFFFF;
+		opacity: 0.5;
+		font-family: 'Helvetica', sans-serif;
+	}
+	.img-ul{
+		width: 100%;
+		margin-top: 60px;
+		display: flex;
+		justify-content: start;
+		align-items: center;
+	}
+	.img-li{
+		margin-right: 20px;
+	}
 	.more-news{
 		width: 100%;
 		height: 866px;
